--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -36,6 +36,5 @@ jobs:
 
         slot-name: 'production'
 
-      #Change the publish profile to match what you named your secret setup in GitHub, Example shown below
 
-        publish-profile: ${{ secrets.APPSERVICECMST388 }}
+        publish-profile: ${{ secrets.AppServiceCMST388 }}
