--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,6 +4,9 @@
 
  
 
+#Change the name to match your course name
+
+#Example name: Deploy HTML Files to AppService - COURSENAME
 
 name: Deploy HTML Files to AppService - CMST388
 
@@ -31,10 +34,12 @@ jobs:
 
       with:
 
-     
+      #Change the app-name to match what was provided to you in the publish settings file, this is in a naming convention of 'COURSENAME-STUDENTUID'
+
         app-name: 'CMST388-shochmuth2'
 
         slot-name: 'production'
 
+      #Change the publish profile to match what you named your secret setup in GitHub, Example shown below
 
         publish-profile: ${{ secrets.AppServiceCMST388 }}
