--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,7 +8,7 @@
 
 #Example name: Deploy HTML Files to AppService - COURSENAME
 
-name: Deploy HTML Files to APPSERVICECMST388
+name: Deploy HTML Files to AppService - CMST388
 
 on:
 
@@ -23,9 +23,9 @@ jobs:
   build-and-deploy:
 
     runs-on: windows-latest
-
-     steps:
-
+    
+    steps:
+     
     - uses: actions/checkout@main
 
     - name: Deploy to Azure Web App
